Bug #604 many professors have asked to have the space between Links and Classes items decreased, to not have so much white space.

--- a/sites/all/themes/openscholar/scholar_eloquent/scholar-eloquent.css
+++ b/sites/all/themes/openscholar/scholar_eloquent/scholar-eloquent.css
@@ -35,11 +35,18 @@ h2 {
     font-size: 20px;
     }
 
+#content h2, h3, h4 {
+  margin-bottom: 0;
+  margin-top: 1em;
+  }
+
 h1 a, h2 a, h3 a, #sidebar-second a {
     font-style: normal;
     }
 
-#content h2, h3, h4 {
+.node-type-class h3.title, .node-type-link h3.title {margin-bottom: 0;}
+
+#content .sidebar h2, h3, h4 {
   margin-bottom: .5em;
   margin-top: 1em;
   }
@@ -68,7 +75,7 @@ img {
   .sidebar .views-field-title  {border-bottom:1px dotted #333;}
   .sidebar .views-row-last .views-field-title  {border-bottom:none;}
   
-
+.node-type-class {margin-bottom:-25px;}
 
 /* HEADER ELEMENTS */
 
